Fix .toc list spacing

--- a/packages/web/src/assets/styles/partials/components/_toc.scss
+++ b/packages/web/src/assets/styles/partials/components/_toc.scss
@@ -5,6 +5,6 @@
   padding-inline-start: functions.size("relative", "2");
 
   li {
-    margin-top: functions.size("spacing", "-2");
+    margin-top: functions.size("relative", "-3");
   }
 }
